# PTOAS

./: CMakeLists.txt  README.md  install.sh
.claude/: CLAUDE.md
.codex/: CLAUDE.md
.codex/rules/: wsl-first.md
.codex/skill/: camodel_isa_verification_skill.md  msprof_op_sim_insight_skill.md
.codex/skills/build-ptoas-wsl/: SKILL.md
.codex/skills/camodel-isa-verification/: SKILL.md
.codex/skills/msprof-op-simulator-insight/: SKILL.md
.codex/skills/pto-isa-cpu-sim-kernel-test/: SKILL.md
.codex/skills/ptoas-project-development/: SKILL.md
.codex/skills/ptoas-publish-pr/: SKILL.md
.github/scripts/: update_ptoas_base_version.py
.github/workflows/: build_wheel_mac.yml  ci.yml  sync_base_version.yml  update_pto_isa_pin.yml
docker/: collect_ptoas_dist.sh  collect_ptoas_dist_mac.sh  copy_ptoas_deps.sh  create_wheel.sh  get_macos_wheel_plat_name.py  setup.py  setup_mac.py  test_ptoas_cli.sh  test_wheel_imports.sh
docs/: PTO_IR_manual.md
docs/designs/: ptoas-tileop-expand-design.md  ptoas-tpush-tpop-design.md
include/: CMakeLists.txt
include/PTO/: CMakeLists.txt
include/PTO/IR/: CMakeLists.txt  PTO.h  PTOAttrs.td  PTODialect.h  PTODialect.td  PTOInterfaces.td  PTOOps.td  PTOSyncUtils.h  PTOTypeDefs.td
include/PTO/Transforms/: BufferizableOpInterfaceImpl.h  CMakeLists.txt  Passes.h  Passes.td
include/pto-c/Dialect/: PTO.h
lib/: CMakeLists.txt
lib/Bindings/Python/: CMakeLists.txt  PTOModule.cpp
lib/CAPI/: CMakeLists.txt
lib/CAPI/Dialect/: CMakeLists.txt  PTO.cpp
lib/PTO/: CMakeLists.txt
lib/PTO/IR/: CMakeLists.txt  PTO.cpp  PTOAttrs.cpp  PTOSyncUtils.cpp  PTOTypeDefs.cpp
lib/PTO/Transforms/: AllocToPointerCast.cpp  AllocToPointerCast.h  BufferizableOpInterfaceImpl.cpp  CMakeLists.txt  ConvertToPTOOp.cpp  InferPTOLayout.cpp  InferPTOMemScope.cpp  InferPTOMemScope.h  LoweringSyncToPipe.cpp  OptMemPlanForPipeline.cpp  OptMemPlanForPipeline.h  PTOA5NormalizeTMovPass.cpp  PTOAssignDefaultFrontendPipeIdPass.cpp  PTOInferValidatePipeInitPass.cpp  PTOLowerFrontendPipeOpsPass.cpp  PTOPlanMemory.cpp  PTOPlanMemory.h  PTORemoveRedundantBarrier.cpp  PTOResolveReservedBuffersPass.cpp  PTOToEmitC.cpp  PTOVerifyTFreePass.cpp  PTOViewToMemref.cpp  PTOWrapFunctionsInSectionsPass.cpp  Utils.cpp  Utils.h
lib/PTO/Transforms/InsertSync/: InsertSyncAnalysis.cpp  InsertSyncDebug.cpp  MemoryDependentAnalyzer.cpp  MoveSyncState.cpp  PTOIRTranslator.cpp  PTOInsertSync.cpp  RemoveRedundantSync.cpp  SyncCodegen.cpp  SyncCommon.cpp  SyncEventIdAllocation.cpp
python/: CMakeLists.txt
python/pto/dialects/: PTOOps.td  pto.py
test/basic/: compact_left_blayout_parser_a3.pto  compact_left_blayout_parser_a5.pto  eventid_array_dyn_sync.pto  eventid_array_get_set_get.pto  eventid_array_no_cse.pto  infer_layout_ambiguous_minor2d_user_dn.pto  issue428_cube_sync_regression.pto  issue454_loop_if_else_loop_carried_sync_regression.pto  issue454_nested_loop_same_pipe_pair_regression.pto  issue481_addptr_gm_slot_buffer.pto  issue489_interleaved_tpop_tfree_a3.pto  kernel_kind_vector_scf_while_emitc.pto  left_blayout_parser_a3.pto  left_blayout_parser_a5.pto  mgather_emitc.pto  mscatter_emitc.pto  partition_view_verify_out_of_bounds.mlir  partition_view_verify_rank_mismatch.mlir  partition_view_verify_size_result_mismatch.mlir  partition_view_verify_valid.mlir  subview_bind_tile_preserve_stride.pto  subview_col_major_compact_keeps_normal_shape.pto  subview_col_major_row_plus_one_stride_offset.pto  subview_compact_keeps_normal_shape.pto  subview_dynamic_offset_static_valid_regression.pto  subview_row_plus_one_stride_offset.pto  subview_validshape_guard.pto  subview_validshape_partial_parent_requires_explicit.pto  tassign_level3_loop_rebind.pto  tassign_level3_missing_alloc_addr.pto  taxpy_emitc.pto  tcolargmax_emitc.pto  tcolargmin_emitc.pto  tcvt_e2e.pto  tcvt_emitc.pto  tcvt_verify_invalid.pto  tdequant.pto  textract_fp_a3_lowering.pto  tfillpad_inplace_alias_lowering.pto  tfillpad_same_ssa_lowers_to_tfillpad.pto  (+31 more)
test/compile_cpp/: abs_vec_core.cpp  compile_lib_full_flags.sh  compile_lib_minimum_flags.sh
test/lit/pto/: empty_func.pto  issue522_expanddiv_a5_int_types.pto  issue546_tfillpad_mat_mismatch_diag.pto  issue556_tpop_live_values_no_alias.pto  kernel_kind_vector_scf_while_emitc.pto  low_precision_type_roundtrip.pto  plan_memory_reserve_buffer_manual_reject_nested_alloc.pto  subview_boxed_row_major_column_slice_preserve_parent_shape_a5.pto  subview_col_major_compact_keeps_normal_shape.pto  subview_col_major_noncompact_preserve_stride.pto  subview_col_major_row_plus_one_stride_offset.pto  subview_compact_keeps_normal_shape.pto  subview_dynamic_offset_static_valid_regression.pto  subview_explicit_result_type.pto  subview_row_plus_one_stride_offset.pto  subview_tmatmul_acc_slices_a5.pto  subview_validshape_guard.pto  tconcatidx.pto  tgetval_level3_index_cast_regression.pto  tpush_tpop_frontend_default_id_compat_a5.pto  tpush_tpop_frontend_multi_id_a5.pto  tpush_tpop_frontend_nosplit_a5.pto  tpush_tpop_frontend_same_direction_conflict_a5.pto  tpush_tpop_frontend_same_direction_multi_a5.pto  tpush_tpop_globaltensor_frontend_a3.pto  (+4 more)
test/python/: compact_tile_buf_asm.py
test/samples/: runop.sh  validation_runtime.py
tools/: CMakeLists.txt
tools/ptoas/: CMakeLists.txt  ptoas.cpp
tools/ptobc/: CMakeLists.txt
tools/ptobc/include/ptobc/: canonical_printer.h  leb128.h  mlir_helpers.h  ptobc_decode.h  ptobc_format.h
tools/ptobc/src/: canonical_printer.cpp  leb128.cpp  main.cpp  mlir_encode.cpp  mlir_helpers.cpp  ptobc_decode_print.cpp  ptobc_format.cpp
tools/ptobc/testdata/: add_static_multicore.pto  func_call_v0_roundtrip.pto  internal_pipe_v0_roundtrip.pto  matmul_static_singlecore.pto  recent_ops_v0_roundtrip.pto  tconcat_set_validshape_v0_roundtrip.pto  tprint_v0_roundtrip.pto  trowexpandsub_v0_roundtrip.pto
tools/ptobc/tests/: CMakeLists.txt  func_call_v0_encode.sh  internal_pipe_v0_encode.sh  opcode_coverage_check.py  ptobc_to_ptoas_smoke.sh  recent_ops_v0_encode.sh  stage9_e2e.sh  tconcat_set_validshape_v0_encode.sh  tprint_v0_encode.sh  trowexpandsub_v0_encode.sh
(+370 files in other folders)
